--- a/app/src/main/res/layout/activity_connection.xml
+++ b/app/src/main/res/layout/activity_connection.xml
@@ -84,6 +84,7 @@
         android:layout_width="0dp"
         android:layout_height="0dp"
         android:background="#80000000"
+        android:clickable="true"
         android:visibility="gone"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
