--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,4 +9,5 @@
     <color name="gray">#989898</color>
     <color name="white">#FFFFFFFF</color>
     <color name="clear">#00FFFFFF</color>
+    <color name="red">#FF0000</color>
 </resources>
