--- a/app/src/main/res/layout/activity_proof_request.xml
+++ b/app/src/main/res/layout/activity_proof_request.xml
@@ -106,7 +106,7 @@
             android:layout_height="wrap_content"
             android:layout_gravity="center"
             android:text="processing..."
-            android:textColor="@color/black"
+            android:textColor="@color/white"
             android:textSize="18sp" />
 
     </FrameLayout>
